# oidc-provider-mock

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.md.tpl  pyproject.toml  renovate.json
.github/workflows/: main.yaml  publish.yaml  release.yaml
dev/: check_release_version.py
docs/: conf.py  http.rst  usage.md
examples/: flask_oidc_example.py
src/oidc_provider_mock/: __main__.py  _app.py  _client_lib.py  _server.py  _storage.py
src/oidc_provider_mock/templates/: _base.html  authorization_form.html  end_session_form.html
tests/: AGENTS.md  auth_form_test.py  auth_test.py  cli_test.py  client_registration_test.py  conftest.py  end_session_test.py  flask_advanced_test.py  misc_test.py  scope_test.py  self_client_test.py  token_test.py
